# io-oauth

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  deny.toml  flake.nix  shell.nix
docs/: README.md
examples/: auth_code_grant.rs  authorization-code-grant.rs  authorization_code_grant.rs  device_auth_grant.rs  device_authorization_grant.rs
src/: client.rs  lib.rs
src/2.0/: client.rs  issue-access-token.rs  issue_access_token.rs  mod.rs  refresh-access-token.rs  refresh_access_token.rs
src/2.0/authorization-code-grant/: access-token-request.rs  authorization-request.rs  authorization-response.rs  mod.rs  pkce.rs  state.rs
src/2.0/authorization_code_grant/: access_token_request.rs  authorization_request.rs  authorization_response.rs  mod.rs  pkce.rs  state.rs
src/2.0/device_authorization_grant/: device_access_token_request.rs  device_authorization_request.rs  mod.rs
src/2.0/rfc7591/: client_registration.rs  mod.rs
src/2.0/rfc8414/: mod.rs  server_metadata.rs
src/2.0/rfc9728/: mod.rs  resource_metadata.rs
src/rfc6749/: access_token_request.rs  auth_request.rs  auth_response.rs  client.rs  client_credentials.rs  issue_access_token.rs  mod.rs  refresh_access_token.rs  state.rs
src/rfc7591/: mod.rs  register.rs  source.rs
src/rfc7636/: mod.rs  pkce.rs
src/rfc8628/: auth.rs  mod.rs  token.rs
