[package]
name = "io-oauth"
description = "OAuth client library for Rust"
version = "0.1.0"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.88"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std"]
keywords = ["io-free", "no-std", "coroutine", "oauth", "pkce"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-oauth/latest/io_oauth"
repository = "https://github.com/pimalaya/io-oauth"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring"]
client = ["dep:rand", "rand/thread_rng"]
native-tls = ["client", "dep:anyhow", "anyhow/std", "dep:pimalaya-stream", "pimalaya-stream/std", "pimalaya-stream/native-tls", "io-http/native-tls"]
rustls-aws = ["client", "dep:anyhow", "anyhow/std", "dep:pimalaya-stream", "pimalaya-stream/std", "pimalaya-stream/rustls-aws", "io-http/rustls-aws"]
rustls-ring = ["client", "dep:anyhow", "anyhow/std", "dep:pimalaya-stream", "pimalaya-stream/std", "pimalaya-stream/rustls-ring", "io-http/rustls-ring"]
vendored = ["pimalaya-stream?/vendored", "io-http/vendored"]

[[example]]
name = "auth_code_grant"
path = "examples/auth_code_grant.rs"
required-features = ["client"]

[[example]]
name = "device_auth_grant"
path = "examples/device_auth_grant.rs"
required-features = ["rustls-ring"]

[dev-dependencies]
env_logger = "0.11"
rustls = "0.23"
rustls-platform-verifier = "0.7"

[dependencies]
anyhow = { version = "1", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
io-http = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
pimalaya-stream = { version = "0.1", default-features = false, optional = true }
rand = { version = "0.10", default-features = false, optional = true }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11", default-features = false, features = ["zeroize"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }
